@@ -22,5 +22,5 @@
 /
 /Users
 /Users/Ryan
-/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/rp
 /Users/Ryan/Desktop/CleanCode/Sandbox/scrap
+/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/rp
